# alma-take-home

./: .env.example  .gitignore  ARCHITECTURE.md  DESIGN.md  README.md  pyproject.toml
.claude/: settings.local.json
app/: main.py  seed.py
app/api/: dependencies.py  router.py
app/api/endpoints/: auth.py  leads.py
app/core/: config.py  database.py  security.py
app/models/: lead.py
app/schemas/: lead.py
app/services/: email_service.py  file_service.py  lead_service.py
scripts/: list_leads.py  login.py  reach_out.py  setup_env.py  submit_lead.py
tests/: conftest.py  test_auth.py  test_email_service.py  test_leads_internal.py  test_leads_public.py
