[project]
name = "alma"
version = "0.1.0"
description = "Alma Lead Management API"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "aiosqlite",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "bcrypt<4.1",
    "pydantic-settings",
    "python-multipart",
    "email-validator",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
